automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -311,7 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import \n",
+    "from sqlalchemy.rom \n",
     "Session = None\n",
     "\n",
     "session = None"
