automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -312,7 +312,8 @@
    "outputs": [],
    "source": [
     "from sqlalchemy.orm import Session\n",
-    "from sqlalchemy.orm import seeeio\n",
+    "from sqlalchemy.orm import sessionmaker\n",
+    "\n",
     "Session = None\n",
     "\n",
     "session = None"
