automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -314,7 +314,7 @@
     "from sqlalchemy.orm import Session\n",
     "from sqlalchemy.orm import sessionmaker\n",
     "\n",
-    "Session = None\n",
+    "Session = sessionmaker\n",
     "\n",
     "session = None"
    ]
