automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -314,9 +314,9 @@
     "from sqlalchemy.orm import Session\n",
     "from sqlalchemy.orm import sessionmaker\n",
     "\n",
-    "Session = sessionmaker\n",
+    "Session = sessionmaker()\n",
     "\n",
-    "session = None"
+    "session = Session(bind)"
    ]
   },
   {
