automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -316,7 +316,7 @@
     "\n",
     "Session = sessionmaker()\n",
     "\n",
-    "session = Session(bind)"
+    "session = Session(bind = Eng)"
    ]
   },
   {
