automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
     "\n",
     "Session = sessionmaker()\n",
     "\n",
-    "session = Session(bind = Eng)"
+    "session = Session(bind = engine)"
    ]
   },
   {
