automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -334,7 +334,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "session.add_all(None)"
+    "session.add_all(customer1, cart1, i)"
    ]
   },
   {
