--- a/index.ipynb
+++ b/index.ipynb
@@ -346,10 +346,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "IdentitySet([<__main__.Customer object at 0x7f6dbd1978d0>, <__main__.ShoppingCart object at 0x7f6dbd1976d8>, <__main__.Item object at 0x7f6dbd197908>])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "session.new"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -362,10 +375,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-11-05 16:50:38,530 INFO sqlalchemy.engine.base.Engine BEGIN (implicit)\n",
+      "2018-11-05 16:50:38,531 INFO sqlalchemy.engine.base.Engine INSERT INTO item (description, price) VALUES (?, ?)\n",
+      "2018-11-05 16:50:38,532 INFO sqlalchemy.engine.base.Engine ('widget', 9.99)\n",
+      "2018-11-05 16:50:38,564 INFO sqlalchemy.engine.base.Engine INSERT INTO \"shoppingCart\" (item_id) VALUES (?)\n",
+      "2018-11-05 16:50:38,565 INFO sqlalchemy.engine.base.Engine (1,)\n",
+      "2018-11-05 16:50:38,567 INFO sqlalchemy.engine.base.Engine INSERT INTO customer (name, cart_id) VALUES (?, ?)\n",
+      "2018-11-05 16:50:38,568 INFO sqlalchemy.engine.base.Engine ('Jane', 1)\n",
+      "2018-11-05 16:50:38,570 INFO sqlalchemy.engine.base.Engine COMMIT\n"
+     ]
+    }
+   ],
+   "source": [
+    "session.commit()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -381,7 +411,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sessio"
+   ]
   },
   {
    "cell_type": "markdown",
